Update base href in index.html

--- a/natraj-saree-angular/browser/index.html
+++ b/natraj-saree-angular/browser/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Natraj Saree Centre - Utkarsh Gupta</title>
-  <base href="/">
+<base href="/shreyan/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Natraj Saree Centre - सबसे बेहतरीन साड़ियों का संग्रह। Owner: Utkarsh Gupta. WhatsApp Ordering Available.">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
